// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceCard renders an href when supplied 1`] = `
<ServiceCard
  url="https://www.thumbtack.com/k/massage/near-me/"
>
  <a
    className="root"
    href="https://www.thumbtack.com/k/massage/near-me/"
  >
    Lorem
  </a>
</ServiceCard>
`;

exports[`ServiceCardDescription renders a description when supplied 1`] = `
<ServiceCardDescription
  iconColor="blue"
>
  <div
    className="descriptionWrap iconBlue"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders a icon and color is blue 1`] = `
<ServiceCardDescription
  icon={<svg />}
  iconColor="blue"
>
  <div
    className="descriptionWrap iconBlue"
  >
    <svg />
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders icon color 1`] = `
<ServiceCardDescription
  icon=""
  iconColor="green"
>
  <div
    className="descriptionWrap iconGreen"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardImage renders an aria-label when supplied by alt 1`] = `
<ServiceCardImage
  alt="Lorem"
  url=""
>
  <LazyImage
    alt="Lorem"
    src=""
  >
    <Waypoint
      bottomOffset={-100}
      debug={false}
      fireOnRapidScroll={true}
      horizontal={false}
      onEnter={[Function]}
      onLeave={[Function]}
      onPositionChange={[Function]}
      topOffset={-100}
    >
      <div
        aria-label="Lorem"
        className="image"
        role="img"
      />
    </Waypoint>
    <noscript>
      <img
        alt="Lorem"
        src=""
      />
    </noscript>
  </LazyImage>
</ServiceCardImage>
`;

exports[`ServiceCardImage renders an background image when supplied 1`] = `
<ServiceCardImage
  alt=""
  url="https://www.thumbtack.com/image.png"
>
  <LazyImage
    alt=""
    src="https://www.thumbtack.com/image.png"
  >
    <Waypoint
      bottomOffset={-100}
      debug={false}
      fireOnRapidScroll={true}
      horizontal={false}
      onEnter={[Function]}
      onLeave={[Function]}
      onPositionChange={[Function]}
      topOffset={-100}
    >
      <div
        aria-label=""
        className="image"
        role="img"
      />
    </Waypoint>
    <noscript>
      <img
        alt=""
        src="https://www.thumbtack.com/image.png"
      />
    </noscript>
  </LazyImage>
</ServiceCardImage>
`;

exports[`ServiceCardTitle renders a title when supplied 1`] = `
<ServiceCardTitle>
  <div
    className="title"
    title="Lorem"
  >
    Lorem
  </div>
</ServiceCardTitle>
`;
